--- a/packages/frontend/src/components/screens/WelcomeScreen/styles.module.scss
+++ b/packages/frontend/src/components/screens/WelcomeScreen/styles.module.scss
@@ -1,5 +1,5 @@
 .welcomeScreenBody {
-  padding-bottom: 0;
+  padding-bottom: 20px;
 }
 
 .inputError {
